--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>git08</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
@@ -13,10 +14,17 @@
     <b>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Sunt?</b>
     <input type="text"><br>
     <hr>
+    <img src="image/3.jpg" alt="">
+    <hr>
+    <hr>
+    <hr>
+    <img src="image/donation0.jpg" alt="">
 
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet?</p>
 
-
-
+    <hr>
+    <hr>
+    <br><br>
 
 
 
